add card event on home page

--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -294,6 +294,9 @@ header .modal-login-form .login-admin-form button:hover {
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
   flex: 1;
+  /* home page */
+  /* error page */
+  /* admin page */
   /***************************REGISTER FORM****************************/
   display: flex;
   flex-direction: column;
@@ -303,9 +306,24 @@ main {
   /***********************REGISTER SUCCESS*****************************/
   /********************************PROFIL**********************************/
 }
+main .title-event-home {
+  text-transform: uppercase;
+}
 main .grid-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+  column-gap: 30px;
+  row-gap: 20px;
+}
+main .grid-container .card-event-container {
+  border-radius: 25px;
+  background-color: #f9f9f9;
+  box-shadow: 4px 4px 4px 2px lightgray;
+}
+main .grid-container .card-event-container p {
+  width: max-content;
+  text-transform: capitalize;
+  padding: 10px;
 }
 main .error404 {
   background-image: url("../../assets/imgs/404.jpg");
@@ -316,12 +334,12 @@ main .error404 {
 }
 main .adminboard-container {
   display: flex;
+  padding: 20px;
   flex-direction: column;
   align-items: center;
   gap: 30px;
 }
 main .adminboard-container ul {
-  padding-top: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -372,6 +390,8 @@ main .adminboard-container .form-new-event {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  box-shadow: 4px 4px 4px 2px lightgray;
+  padding: 20px;
 }
 main .adminboard-container .form-new-event form {
   display: flex;
@@ -383,6 +403,16 @@ main .adminboard-container .form-new-event form {
 main .adminboard-container .form-new-event form label {
   text-transform: capitalize;
   font-weight: bold;
+}
+main .adminboard-container .form-new-event form input {
+  width: 100%;
+  border-radius: 5px;
+  height: 30px;
+  border: 1px solid lightgray;
+  background-color: #fafafa;
+}
+main .adminboard-container .form-new-event form input:invalid {
+  border: 1px solid #fa3457;
 }
 main .adminboard-container .form-new-event form button {
   text-transform: uppercase;
@@ -397,41 +427,6 @@ main .adminboard-container .form-new-event form button {
   margin-top: 5px;
 }
 main .adminboard-container .form-new-event form button:hover {
-  background-color: #474747;
-  transition: 0.5s background-color;
-}
-main .admin-container .form-admin-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-  height: 80%;
-}
-main .admin-container .form-admin-container form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-main .admin-container .form-admin-container form label {
-  font-weight: 600;
-  text-transform: capitalize;
-  color: #252525;
-}
-main .admin-container .form-admin-container form button {
-  text-transform: uppercase;
-  background-color: #445aff;
-  padding: 0.5rem 0.7rem;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: bold;
-  color: white;
-  cursor: pointer;
-  transition: 0.5s background-color;
-}
-main .admin-container .form-admin-container form button:hover {
   background-color: #474747;
   transition: 0.5s background-color;
 }
@@ -455,7 +450,9 @@ main .containerFormCompletionIndicator {
   gap: 5px;
   margin-bottom: 20px;
 }
-main .containerFormCompletionIndicator .formCompletionIndicator1, main .containerFormCompletionIndicator .formCompletionIndicator2, main .containerFormCompletionIndicator .formCompletionIndicator3 {
+main .containerFormCompletionIndicator .formCompletionIndicator1,
+main .containerFormCompletionIndicator .formCompletionIndicator2,
+main .containerFormCompletionIndicator .formCompletionIndicator3 {
   height: 30px;
   width: 30px;
   border-radius: 50%;
@@ -480,14 +477,18 @@ main .containerForm form {
   gap: 25px;
   width: 100%;
 }
-main .containerForm form .formPart1, main .containerForm form .formPart2, main .containerForm form .formPart3 {
+main .containerForm form .formPart1,
+main .containerForm form .formPart2,
+main .containerForm form .formPart3 {
   display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 10px;
 }
-main .containerForm form .formPart1 input, main .containerForm form .formPart2 input, main .containerForm form .formPart3 input {
+main .containerForm form .formPart1 input,
+main .containerForm form .formPart2 input,
+main .containerForm form .formPart3 input {
   width: 100%;
   border-radius: 5px;
   border: none;
@@ -495,16 +496,20 @@ main .containerForm form .formPart1 input, main .containerForm form .formPart2 i
   border: 1px solid lightgray;
   background-color: #fafafa;
 }
-main .containerForm form .formPart1 input:invalid, main .containerForm form .formPart2 input:invalid, main .containerForm form .formPart3 input:invalid {
+main .containerForm form .formPart1 input:invalid,
+main .containerForm form .formPart2 input:invalid,
+main .containerForm form .formPart3 input:invalid {
   border: 1px solid #fa3457;
 }
-main .containerForm form .formPart1 select, main .containerForm form .formPart2 select, main .containerForm form .formPart3 select {
+main .containerForm form .formPart1 select,
+main .containerForm form .formPart2 select,
+main .containerForm form .formPart3 select {
   width: 100%;
   height: 30px;
   border-radius: 1px;
   border: none;
   border: 1px solid lightgray;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 main .containerForm form .formPart1 {
   display: flex;
@@ -604,7 +609,9 @@ main .metaInfos {
   margin-bottom: 30px;
   padding: 4%;
 }
-main .metaInfos .personalInfos, main .metaInfos .availability, main .metaInfos .expression {
+main .metaInfos .personalInfos,
+main .metaInfos .availability,
+main .metaInfos .expression {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -614,7 +621,9 @@ main .metaInfos .personalInfos, main .metaInfos .availability, main .metaInfos .
   background-color: #f9f9f9;
   box-shadow: 4px 4px 4px 2px lightgray;
 }
-main .metaInfos .personalInfos .titleProfil, main .metaInfos .availability .titleProfil, main .metaInfos .expression .titleProfil {
+main .metaInfos .personalInfos .titleProfil,
+main .metaInfos .availability .titleProfil,
+main .metaInfos .expression .titleProfil {
   width: 100%;
   height: 80px;
   display: flex;
@@ -623,7 +632,9 @@ main .metaInfos .personalInfos .titleProfil, main .metaInfos .availability .titl
   border: 1px solid #474747;
   border-radius: 2px;
 }
-main .metaInfos .personalInfos .infosProfil, main .metaInfos .availability .infosProfil, main .metaInfos .expression .infosProfil {
+main .metaInfos .personalInfos .infosProfil,
+main .metaInfos .availability .infosProfil,
+main .metaInfos .expression .infosProfil {
   display: flex;
   justify-content: center;
   align-items: start;
@@ -632,7 +643,9 @@ main .metaInfos .personalInfos .infosProfil, main .metaInfos .availability .info
   width: 100%;
   gap: 15px;
 }
-main .metaInfos .personalInfos .infosProfil p, main .metaInfos .availability .infosProfil p, main .metaInfos .expression .infosProfil p {
+main .metaInfos .personalInfos .infosProfil p,
+main .metaInfos .availability .infosProfil p,
+main .metaInfos .expression .infosProfil p {
   margin-left: 15px;
 }
 main .metaMissions {
@@ -689,7 +702,7 @@ main .metaMissions .myMissions {
   }
   /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
   main .grid-container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
   /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
 }
@@ -748,7 +761,7 @@ main .metaMissions .myMissions {
   }
   /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
   main .grid-container {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
   /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
 }
