--- a/frontend/styles/scss/_desktop.scss
+++ b/frontend/styles/scss/_desktop.scss
@@ -54,7 +54,7 @@ header {
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
   .grid-container {
-    grid-template-columns: repeat(3, 1fr);
+    column-gap: 40px;
   }
 }
 
