--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -281,7 +281,7 @@ main {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     column-gap: 30px;
-    row-gap: 20px;
+    row-gap: 40px;
 
     .card-event-container {
       border-radius: 25px;
@@ -306,6 +306,8 @@ main {
 
   /* admin page */
   .adminboard-container {
+    width: 100%;
+    max-width: 100%;
     display: flex;
     padding: 20px;
     flex-direction: column;
@@ -360,6 +362,7 @@ main {
       align-items: center;
       justify-content: center;
       gap: 10px;
+      background-color: $content;
       box-shadow: 4px 4px 4px 2px lightgray;
       padding: 20px;
       form {
@@ -390,34 +393,6 @@ main {
       }
     }
   }
-
-  // .admin-container {
-  //   .form-admin-container {
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: center;
-  //     align-items: center;
-  //     gap: 50px;
-  //     height: 80%;
-
-  //     form {
-  //       display: flex;
-  //       flex-direction: column;
-  //       align-items: center;
-  //       justify-content: center;
-  //       gap: 10px;
-
-  //       label {
-  //         font-weight: 600;
-  //         text-transform: capitalize;
-  //         color: $text-color;
-  //       }
-  //       button {
-  //         @include template-btn;
-  //       }
-  //     }
-  //   }
-  // }
 
   /***************************REGISTER FORM****************************/
   display: flex;
