--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -276,14 +276,18 @@ main {
   /* home page */
   .title-event-home {
     text-transform: uppercase;
+    text-align: center;
   }
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     column-gap: 30px;
     row-gap: 40px;
+    padding: 20px 0;
 
     .card-event-container {
+      width: 90%;
+      margin: auto;
       border-radius: 25px;
       background-color: $content;
       box-shadow: 4px 4px 4px 2px lightgray;
@@ -333,6 +337,17 @@ main {
       gap: 10px;
       h1 {
         text-align: center;
+      }
+      .card-event-container {
+        border-radius: 25px;
+        background-color: $content;
+        margin-bottom: 20px;
+        box-shadow: 4px 4px 4px 2px lightgray;
+        p {
+          width: max-content;
+          text-transform: capitalize;
+          padding: 10px;
+        }
       }
       table {
         border-collapse: collapse;
@@ -395,11 +410,11 @@ main {
   }
 
   /***************************REGISTER FORM****************************/
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // gap: 10px;
 
   .registerFormTitle {
     margin-top: 80px;
