--- a/frontend/styles/scss/_desktop.scss
+++ b/frontend/styles/scss/_desktop.scss
@@ -27,9 +27,9 @@ header {
 
       li {
         a {
-          color: $text-color;
+          color: black;
           text-transform: uppercase;
-          font-weight: bold;
+          font-weight: 900;
         }
       }
     }
