--- a/frontend/styles/scss/_template.scss
+++ b/frontend/styles/scss/_template.scss
@@ -14,8 +14,25 @@
   }
 }
 
-@mixin template-error() {
+@mixin template-alert($color) {
+  background-color: $color;
+  color: white;
+  width: max-content;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0 10px;
+
+  // offset-path: ;
 }
 
-@mixin temlate-valid() {
+@keyframes alert {
+  0% {
+    padding: 10px;
+  }
+  50% {
+    padding: 12px;
+  }
+  100% {
+    padding: 10px;
+  }
 }
