--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -67,8 +67,7 @@ body {
   height: 100dvh;
 }
 
-/*/////////////////////////////////// IMPORT /////////////////////////////////////////////*/
-
+// import
 @import "colors";
 @import "template";
 
@@ -273,7 +272,7 @@ header {
 main {
   flex: 1;
 
-  /* home page */
+  // home page
   .title-event-home {
     text-transform: uppercase;
     text-align: center;
@@ -299,7 +298,7 @@ main {
     }
   }
 
-  /* error page */
+  // error page
   .error404 {
     background-image: url("../../assets/imgs/404.jpg");
     background-size: cover;
@@ -308,7 +307,7 @@ main {
     height: 100%;
   }
 
-  /* admin page */
+  //  admin page
   .adminboard-container {
     width: 100%;
     max-width: 100%;
@@ -332,11 +331,20 @@ main {
       }
     }
     .events-container {
+      position: relative;
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 10px;
       h1 {
         text-align: center;
+      }
+      .error {
+        @include template-alert($alert);
+      }
+
+      .success {
+        @include template-alert($succes);
       }
       .card-event-container {
         border-radius: 25px;
@@ -350,6 +358,7 @@ main {
         }
       }
       table {
+        text-align: center;
         border-collapse: collapse;
         border: 2px solid black;
         background-color: $primary-color;
@@ -357,7 +366,7 @@ main {
           tr {
             th {
               color: white;
-              padding: 0;
+              padding: 10px;
             }
           }
         }
@@ -365,7 +374,7 @@ main {
           tr {
             td {
               color: white;
-              padding: 0 5px;
+              padding: 10px;
             }
           }
         }
@@ -410,11 +419,6 @@ main {
   }
 
   /***************************REGISTER FORM****************************/
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
-  // gap: 10px;
 
   .registerFormTitle {
     margin-top: 80px;
