push before merge

--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -311,6 +311,7 @@ main {
 main .title-event-home {
   text-transform: uppercase;
   text-align: center;
+  margin-top: 10px;
 }
 main .grid-container {
   display: grid;
