--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -276,6 +276,7 @@ main {
   .title-event-home {
     text-transform: uppercase;
     text-align: center;
+    margin-top: 10px;
   }
   .grid-container {
     display: grid;
