add event by volunteers on admin page & profil page + check problem Lucas + finish login volunteers & admin

--- a/frontend/styles/scss/_desktop.scss
+++ b/frontend/styles/scss/_desktop.scss
@@ -55,6 +55,19 @@ header {
 main {
   .grid-container {
     column-gap: 40px;
+    .card-event-container {
+      width: 390px;
+    }
+  }
+  .alternativeMain {
+    .events-user-container {
+      .events-user-mobile {
+        display: none;
+      }
+      .events-user-desktop {
+        display: block;
+      }
+    }
   }
 }
 
