push before merge Lucas'branch + add readme

--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -1100,6 +1100,10 @@ main .metaMissions .myMissions {
 }
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
+footer {
+  background-color: #474747;
+}
+
 /*/////////////////////////////// RESPONSIVE TABLET 768px //////////////////////////////////////*/
 @media (min-width: 768px) {
   /*//////////////////////////////////// HEADER ////////////////////////////////////////////*/
