--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -972,6 +972,9 @@ main {
 }
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
+footer {
+  background-color: $footer-bcg;
+}
 
 /*/////////////////////////////// RESPONSIVE TABLET 768px //////////////////////////////////////*/
 
